fixed the overflow settings for both the secret parent and the root of the file

--- a/client/src/assets/App.css
+++ b/client/src/assets/App.css
@@ -5,7 +5,7 @@
   html,
   body,
   #root {
-    @apply h-full w-full m-0 p-0 bg-s-dark;
+    @apply h-full w-full m-0 p-0 bg-s-dark overflow-y-hidden;
     
   }
 }
